// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly bold body element 1`] = `
<section
  className="MuiBox-root css-mh82v9"
>
  <div
    className="MuiContainer-root MuiContainer-maxWidthLg MuiContainer-disableGutters css-1p4tas-MuiContainer-root"
  >
    <div
      className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-direction-xs-[object Object] css-1uh0q7-MuiGrid-root"
    >
      <div
        className="MuiGrid-root MuiGrid-item MuiGrid-grid-md-5 css-1bg3dt9-MuiGrid-root"
      >
        <div
          className="MuiStack-root css-1ed8rzx-MuiStack-root"
        >
          <div
            className="MuiStack-root css-1ds45zp-MuiStack-root"
          >
            <span
              className="MuiTypography-root MuiTypography-overline css-1hbyad5-MuiTypography-root"
            >
              per i cittadini
            </span>
            <h4
              className="MuiTypography-root MuiTypography-h4 css-wz9of0-MuiTypography-root"
            >
              Non perderti più nessuna notifica
            </h4>
            <p>
              Con Piattaforma Notifiche, ricevi e gestisci nello stesso spazio tutti gli atti di notifica che ti inviano
               
              <b>
                Enti e Pubbliche Amministrazioni
              </b>
              , come multe o certificati elettorali. E, grazie all\`integrazione con pagoPA, puoi anche pagare eventuali costi. Così, risparmi tempo e denaro.
            </p>
          </div>
          <div
            className="MuiStack-root css-ohvfxc-MuiStack-root"
          >
            <button
              className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium css-1ey3k6t-MuiButtonBase-root-MuiButton-root"
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onContextMenu={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex={0}
              text="Accedi"
              type="button"
            >
              Accedi
            </button>
            <button
              className="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium css-p6jo29-MuiButtonBase-root-MuiButton-root"
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onContextMenu={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex={0}
              text="Scopri di più"
              type="button"
            >
              Scopri di più
            </button>
          </div>
        </div>
      </div>
      <div
        className="MuiGrid-root MuiGrid-item MuiGrid-grid-md-5 css-1bg3dt9-MuiGrid-root"
      >
        <div
          className="MuiBox-root css-1fol4ad"
        >
          <img
            alt="a landscape photo"
            src="static/media/regular.d1ac9ad6.png"
            style={
              {
                "height": "auto",
                "maxWidth": "100%",
                "objectFit": "contain",
                "objectPosition": "center",
                "transform": "",
                "userSelect": "none",
              }
            }
          />
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`renders correctly center 1`] = `
<section
  className="MuiBox-root css-mh82v9"
>
  <div
    className="MuiContainer-root MuiContainer-maxWidthLg MuiContainer-disableGutters css-1p4tas-MuiContainer-root"
  >
    <div
      className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-direction-xs-[object Object] css-1uh0q7-MuiGrid-root"
    >
      <div
        className="MuiGrid-root MuiGrid-item MuiGrid-grid-md-4 css-pzex4e-MuiGrid-root"
      >
        <div
          className="MuiStack-root css-1ed8rzx-MuiStack-root"
        >
          <div
            className="MuiStack-root css-1ds45zp-MuiStack-root"
          >
            <span
              className="MuiTypography-root MuiTypography-overline css-1hbyad5-MuiTypography-root"
            >
              per i cittadini
            </span>
            <h4
              className="MuiTypography-root MuiTypography-h4 css-wz9of0-MuiTypography-root"
            >
              Non perderti più nessuna notifica
            </h4>
            <p
              className="MuiTypography-root MuiTypography-body2 css-1yr8029-MuiTypography-root"
            >
              Con Piattaforma Notifiche, ricevi e gestisci nello stesso spazio tutti gli atti di notifica che ti inviano Enti e Pubbliche Amministrazioni, come multe o certificati elettorali. E, grazie all'integrazione con pagoPA, puoi anche pagare eventuali costi. Così, risparmi tempo e denaro.
            </p>
          </div>
          <div
            className="MuiStack-root css-ohvfxc-MuiStack-root"
          >
            <button
              className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium css-1ey3k6t-MuiButtonBase-root-MuiButton-root"
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onContextMenu={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex={0}
              text="Accedi"
              type="button"
            >
              Accedi
              <span
                className="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </button>
            <button
              className="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium css-p6jo29-MuiButtonBase-root-MuiButton-root"
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onContextMenu={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex={0}
              text="Scopri di più"
              type="button"
            >
              Scopri di più
              <span
                className="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </button>
          </div>
        </div>
      </div>
      <div
        className="MuiGrid-root MuiGrid-item MuiGrid-grid-md-4 css-pzex4e-MuiGrid-root"
      >
        <div
          className="MuiBox-root css-1fol4ad"
        >
          <img
            alt="a landscape photo"
            src="static/media/regular.d1ac9ad6.png"
            style={
              {
                "height": "auto",
                "maxWidth": "100%",
                "objectFit": "contain",
                "objectPosition": "center",
                "transform": "",
                "userSelect": "none",
              }
            }
          />
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`renders correctly ctas element 1`] = `
<section
  className="MuiBox-root css-mh82v9"
>
  <div
    className="MuiContainer-root MuiContainer-maxWidthLg MuiContainer-disableGutters css-1p4tas-MuiContainer-root"
  >
    <div
      className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-direction-xs-[object Object] css-1uh0q7-MuiGrid-root"
    >
      <div
        className="MuiGrid-root MuiGrid-item MuiGrid-grid-md-4 css-pzex4e-MuiGrid-root"
      >
        <div
          className="MuiStack-root css-1ed8rzx-MuiStack-root"
        >
          <div
            className="MuiStack-root css-1ds45zp-MuiStack-root"
          >
            <span
              className="MuiTypography-root MuiTypography-overline css-1hbyad5-MuiTypography-root"
            >
              per i cittadini
            </span>
            <h4
              className="MuiTypography-root MuiTypography-h4 css-wz9of0-MuiTypography-root"
            >
              Non perderti più nessuna notifica
            </h4>
            <p
              className="MuiTypography-root MuiTypography-body2 css-1yr8029-MuiTypography-root"
            >
              Con Piattaforma Notifiche, ricevi e gestisci nello stesso spazio tutti gli atti di notifica che ti inviano Enti e Pubbliche Amministrazioni, come multe o certificati elettorali. E, grazie all'integrazione con pagoPA, puoi anche pagare eventuali costi. Così, risparmi tempo e denaro.
            </p>
          </div>
          <div
            className="MuiStack-root css-ohvfxc-MuiStack-root"
          >
            <button>
              +
            </button>
            <button
              className="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium css-p6jo29-MuiButtonBase-root-MuiButton-root"
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onContextMenu={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex={0}
              text="Scopri di più"
              type="button"
            >
              Scopri di più
              <span
                className="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </button>
          </div>
        </div>
      </div>
      <div
        className="MuiGrid-root MuiGrid-item MuiGrid-grid-md-4 css-pzex4e-MuiGrid-root"
      >
        <div
          className="MuiBox-root css-1fol4ad"
        >
          <img
            alt="a landscape photo"
            src="static/media/regular.d1ac9ad6.png"
            style={
              {
                "height": "auto",
                "maxWidth": "100%",
                "objectFit": "contain",
                "objectPosition": "center",
                "transform": "",
                "userSelect": "none",
              }
            }
          />
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`renders correctly dots 1`] = `
<section
  className="MuiBox-root css-mh82v9"
>
  <div
    className="MuiContainer-root MuiContainer-maxWidthLg MuiContainer-disableGutters css-1p4tas-MuiContainer-root"
  >
    <div
      className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-direction-xs-[object Object] css-1uh0q7-MuiGrid-root"
    >
      <div
        className="MuiGrid-root MuiGrid-item MuiGrid-grid-md-5 css-1bg3dt9-MuiGrid-root"
      >
        <div
          className="MuiStack-root css-1ed8rzx-MuiStack-root"
        >
          <div
            className="MuiStack-root css-1ds45zp-MuiStack-root"
          >
            <span
              className="MuiTypography-root MuiTypography-overline css-1hbyad5-MuiTypography-root"
            >
              per i cittadini
            </span>
            <h4
              className="MuiTypography-root MuiTypography-h4 css-wz9of0-MuiTypography-root"
            >
              Non perderti più nessuna notifica
            </h4>
            <p
              className="MuiTypography-root MuiTypography-body2 css-1yr8029-MuiTypography-root"
            >
              Con Piattaforma Notifiche, ricevi e gestisci nello stesso spazio tutti gli atti di notifica che ti inviano Enti e Pubbliche Amministrazioni, come multe o certificati elettorali. E, grazie all'integrazione con pagoPA, puoi anche pagare eventuali costi. Così, risparmi tempo e denaro.
            </p>
          </div>
          <div
            className="MuiStack-root css-ohvfxc-MuiStack-root"
          >
            <button
              className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium css-1ey3k6t-MuiButtonBase-root-MuiButton-root"
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onContextMenu={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex={0}
              text="Accedi"
              type="button"
            >
              Accedi
            </button>
            <button
              className="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium css-p6jo29-MuiButtonBase-root-MuiButton-root"
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onContextMenu={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex={0}
              text="Scopri di più"
              type="button"
            >
              Scopri di più
            </button>
          </div>
        </div>
      </div>
      <div
        className="MuiGrid-root MuiGrid-item MuiGrid-grid-md-5 css-1bg3dt9-MuiGrid-root"
      >
        <div
          className="MuiBox-root css-lu0gmz"
        >
          <img
            alt="a landscape photo"
            src="static/media/regular.d1ac9ad6.png"
            style={
              {
                "height": "auto",
                "maxWidth": "100%",
                "objectFit": "contain",
                "objectPosition": "center",
                "transform": "translate(40px, -30px)",
                "userSelect": "none",
              }
            }
          />
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`renders correctly label image 1`] = `
<section
  className="MuiBox-root css-mh82v9"
>
  <div
    className="MuiContainer-root MuiContainer-maxWidthLg MuiContainer-disableGutters css-1p4tas-MuiContainer-root"
  >
    <div
      className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-direction-xs-[object Object] css-1uh0q7-MuiGrid-root"
    >
      <div
        className="MuiGrid-root MuiGrid-item MuiGrid-grid-md-4 css-pzex4e-MuiGrid-root"
      >
        <div
          className="MuiStack-root css-1ed8rzx-MuiStack-root"
        >
          <div
            className="MuiStack-root css-1ds45zp-MuiStack-root"
          >
            <span
              className="MuiTypography-root MuiTypography-overline css-1hbyad5-MuiTypography-root"
            >
              per i cittadini
            </span>
            <h4
              className="MuiTypography-root MuiTypography-h4 css-wz9of0-MuiTypography-root"
            >
              Non perderti più nessuna notifica
            </h4>
            <p
              className="MuiTypography-root MuiTypography-body2 css-1yr8029-MuiTypography-root"
            >
              Con Piattaforma Notifiche, ricevi e gestisci nello stesso spazio tutti gli atti di notifica che ti inviano Enti e Pubbliche Amministrazioni, come multe o certificati elettorali. E, grazie all'integrazione con pagoPA, puoi anche pagare eventuali costi. Così, risparmi tempo e denaro.
            </p>
          </div>
          <div
            className="MuiStack-root css-ohvfxc-MuiStack-root"
          >
            <button
              className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium css-1ey3k6t-MuiButtonBase-root-MuiButton-root"
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onContextMenu={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex={0}
              text="Accedi"
              type="button"
            >
              Accedi
              <span
                className="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </button>
            <button
              className="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium css-p6jo29-MuiButtonBase-root-MuiButton-root"
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onContextMenu={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex={0}
              text="Scopri di più"
              type="button"
            >
              Scopri di più
              <span
                className="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </button>
          </div>
        </div>
      </div>
      <div
        className="MuiGrid-root MuiGrid-item MuiGrid-grid-md-4 css-pzex4e-MuiGrid-root"
      >
        <div
          className="MuiBox-root css-1fol4ad"
        >
          <div
            className="MuiBox-root css-0"
            style={
              {
                "height": "auto",
                "maxWidth": "100%",
                "objectFit": "contain",
                "objectPosition": "center",
                "transform": "",
                "userSelect": "none",
              }
            }
          >
            <img
              alt="another portrait"
              src="static/media/portrait.a833a020.png"
            />
            <p>
              label example
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`renders correctly no label 1`] = `
<section
  className="MuiBox-root css-mh82v9"
>
  <div
    className="MuiContainer-root MuiContainer-maxWidthLg MuiContainer-disableGutters css-1p4tas-MuiContainer-root"
  >
    <div
      className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-direction-xs-[object Object] css-1uh0q7-MuiGrid-root"
    >
      <div
        className="MuiGrid-root MuiGrid-item MuiGrid-grid-md-5 css-1bg3dt9-MuiGrid-root"
      >
        <div
          className="MuiStack-root css-1ed8rzx-MuiStack-root"
        >
          <div
            className="MuiStack-root css-1ds45zp-MuiStack-root"
          >
            <span
              className="MuiTypography-root MuiTypography-overline css-1hbyad5-MuiTypography-root"
            />
            <h4
              className="MuiTypography-root MuiTypography-h4 css-wz9of0-MuiTypography-root"
            >
              Non perderti più nessuna notifica
            </h4>
            <p
              className="MuiTypography-root MuiTypography-body2 css-1yr8029-MuiTypography-root"
            >
              Con Piattaforma Notifiche, ricevi e gestisci nello stesso spazio tutti gli atti di notifica che ti inviano Enti e Pubbliche Amministrazioni, come multe o certificati elettorali. E, grazie all'integrazione con pagoPA, puoi anche pagare eventuali costi. Così, risparmi tempo e denaro.
            </p>
          </div>
          <div
            className="MuiStack-root css-ohvfxc-MuiStack-root"
          >
            <button
              className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium css-1ey3k6t-MuiButtonBase-root-MuiButton-root"
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onContextMenu={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex={0}
              text="Accedi"
              type="button"
            >
              Accedi
              <span
                className="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </button>
            <button
              className="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium css-p6jo29-MuiButtonBase-root-MuiButton-root"
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onContextMenu={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex={0}
              text="Scopri di più"
              type="button"
            >
              Scopri di più
              <span
                className="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </button>
          </div>
        </div>
      </div>
      <div
        className="MuiGrid-root MuiGrid-item MuiGrid-grid-md-5 css-1bg3dt9-MuiGrid-root"
      >
        <div
          className="MuiBox-root css-1fol4ad"
        >
          <img
            alt="a landscape photo"
            src="static/media/regular.d1ac9ad6.png"
            style={
              {
                "height": "auto",
                "maxWidth": "100%",
                "objectFit": "contain",
                "objectPosition": "center",
                "transform": "",
                "userSelect": "none",
              }
            }
          />
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`renders correctly reversed wide 1`] = `
<section
  className="MuiBox-root css-mh82v9"
>
  <div
    className="MuiContainer-root MuiContainer-maxWidthLg MuiContainer-disableGutters css-1p4tas-MuiContainer-root"
  >
    <div
      className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-direction-xs-[object Object] css-1qht6bt-MuiGrid-root"
    >
      <div
        className="MuiGrid-root MuiGrid-item MuiGrid-grid-md-6 css-rw45p3-MuiGrid-root"
      >
        <div
          className="MuiStack-root css-1ed8rzx-MuiStack-root"
        >
          <div
            className="MuiStack-root css-1ds45zp-MuiStack-root"
          >
            <span
              className="MuiTypography-root MuiTypography-overline css-1hbyad5-MuiTypography-root"
            >
              per i cittadini
            </span>
            <h4
              className="MuiTypography-root MuiTypography-h4 css-wz9of0-MuiTypography-root"
            >
              Non perderti più nessuna notifica
            </h4>
            <p
              className="MuiTypography-root MuiTypography-body2 css-1yr8029-MuiTypography-root"
            >
              Con Piattaforma Notifiche, ricevi e gestisci nello stesso spazio tutti gli atti di notifica che ti inviano Enti e Pubbliche Amministrazioni, come multe o certificati elettorali. E, grazie all'integrazione con pagoPA, puoi anche pagare eventuali costi. Così, risparmi tempo e denaro.
            </p>
          </div>
          <div
            className="MuiStack-root css-ohvfxc-MuiStack-root"
          >
            <button
              className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium css-1ey3k6t-MuiButtonBase-root-MuiButton-root"
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onContextMenu={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex={0}
              text="Accedi"
              type="button"
            >
              Accedi
            </button>
            <button
              className="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium css-p6jo29-MuiButtonBase-root-MuiButton-root"
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onContextMenu={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex={0}
              text="Scopri di più"
              type="button"
            >
              Scopri di più
            </button>
          </div>
        </div>
      </div>
      <div
        className="MuiGrid-root MuiGrid-item MuiGrid-grid-md-6 css-rw45p3-MuiGrid-root"
      >
        <div
          className="MuiBox-root css-1fol4ad"
        >
          <img
            alt="a landscape photo"
            src="static/media/regular.d1ac9ad6.png"
            style={
              {
                "height": "auto",
                "maxWidth": "100%",
                "objectFit": "contain",
                "objectPosition": "center",
                "transform": "",
                "userSelect": "none",
              }
            }
          />
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`renders correctly rotated image 1`] = `
<section
  className="MuiBox-root css-mh82v9"
>
  <div
    className="MuiContainer-root MuiContainer-maxWidthLg MuiContainer-disableGutters css-1p4tas-MuiContainer-root"
  >
    <div
      className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-direction-xs-[object Object] css-1uh0q7-MuiGrid-root"
    >
      <div
        className="MuiGrid-root MuiGrid-item MuiGrid-grid-md-4 css-pzex4e-MuiGrid-root"
      >
        <div
          className="MuiStack-root css-1ed8rzx-MuiStack-root"
        >
          <div
            className="MuiStack-root css-1ds45zp-MuiStack-root"
          >
            <span
              className="MuiTypography-root MuiTypography-overline css-1hbyad5-MuiTypography-root"
            >
              per i cittadini
            </span>
            <h4
              className="MuiTypography-root MuiTypography-h4 css-wz9of0-MuiTypography-root"
            >
              Non perderti più nessuna notifica
            </h4>
            <p
              className="MuiTypography-root MuiTypography-body2 css-1yr8029-MuiTypography-root"
            >
              Con Piattaforma Notifiche, ricevi e gestisci nello stesso spazio tutti gli atti di notifica che ti inviano Enti e Pubbliche Amministrazioni, come multe o certificati elettorali. E, grazie all'integrazione con pagoPA, puoi anche pagare eventuali costi. Così, risparmi tempo e denaro.
            </p>
          </div>
          <div
            className="MuiStack-root css-ohvfxc-MuiStack-root"
          >
            <button
              className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium css-1ey3k6t-MuiButtonBase-root-MuiButton-root"
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onContextMenu={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex={0}
              text="Accedi"
              type="button"
            >
              Accedi
            </button>
            <button
              className="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium css-p6jo29-MuiButtonBase-root-MuiButton-root"
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onContextMenu={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex={0}
              text="Scopri di più"
              type="button"
            >
              Scopri di più
            </button>
          </div>
        </div>
      </div>
      <div
        className="MuiGrid-root MuiGrid-item MuiGrid-grid-md-4 css-pzex4e-MuiGrid-root"
      >
        <div
          className="MuiBox-root css-t6x7ch"
        >
          <div
            className="MuiBox-root css-0"
            style={
              {
                "height": "auto",
                "maxWidth": "100%",
                "objectFit": "contain",
                "objectPosition": "center",
                "transform": "",
                "userSelect": "none",
              }
            }
          >
            <img
              alt="another portrait"
              src="static/media/portrait.a833a020.png"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`renders correctly solid 1`] = `
<section
  className="MuiBox-root css-mh82v9"
>
  <div
    className="MuiContainer-root MuiContainer-maxWidthLg MuiContainer-disableGutters css-1p4tas-MuiContainer-root"
  >
    <div
      className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-direction-xs-[object Object] css-1uh0q7-MuiGrid-root"
    >
      <div
        className="MuiGrid-root MuiGrid-item MuiGrid-grid-md-5 css-1bg3dt9-MuiGrid-root"
      >
        <div
          className="MuiStack-root css-1ed8rzx-MuiStack-root"
        >
          <div
            className="MuiStack-root css-1ds45zp-MuiStack-root"
          >
            <span
              className="MuiTypography-root MuiTypography-overline css-1hbyad5-MuiTypography-root"
            >
              per i cittadini
            </span>
            <h4
              className="MuiTypography-root MuiTypography-h4 css-wz9of0-MuiTypography-root"
            >
              Non perderti più nessuna notifica
            </h4>
            <p
              className="MuiTypography-root MuiTypography-body2 css-1yr8029-MuiTypography-root"
            >
              Con Piattaforma Notifiche, ricevi e gestisci nello stesso spazio tutti gli atti di notifica che ti inviano Enti e Pubbliche Amministrazioni, come multe o certificati elettorali. E, grazie all'integrazione con pagoPA, puoi anche pagare eventuali costi. Così, risparmi tempo e denaro.
            </p>
          </div>
          <div
            className="MuiStack-root css-ohvfxc-MuiStack-root"
          >
            <button
              className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium css-1ey3k6t-MuiButtonBase-root-MuiButton-root"
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onContextMenu={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex={0}
              text="Accedi"
              type="button"
            >
              Accedi
              <span
                className="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </button>
            <button
              className="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium css-p6jo29-MuiButtonBase-root-MuiButton-root"
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onContextMenu={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex={0}
              text="Scopri di più"
              type="button"
            >
              Scopri di più
              <span
                className="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </button>
          </div>
        </div>
      </div>
      <div
        className="MuiGrid-root MuiGrid-item MuiGrid-grid-md-5 css-1bg3dt9-MuiGrid-root"
      >
        <div
          className="MuiBox-root css-ighdzq"
        >
          <img
            alt="a landscape photo"
            src="static/media/regular.d1ac9ad6.png"
            style={
              {
                "height": "auto",
                "maxWidth": "100%",
                "objectFit": "contain",
                "objectPosition": "center",
                "transform": "translate(40px, -30px)",
                "userSelect": "none",
              }
            }
          />
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`renders correctly standard 1`] = `
<section
  className="MuiBox-root css-mh82v9"
>
  <div
    className="MuiContainer-root MuiContainer-maxWidthLg MuiContainer-disableGutters css-1p4tas-MuiContainer-root"
  >
    <div
      className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-direction-xs-[object Object] css-1uh0q7-MuiGrid-root"
    >
      <div
        className="MuiGrid-root MuiGrid-item MuiGrid-grid-md-5 css-1bg3dt9-MuiGrid-root"
      >
        <div
          className="MuiStack-root css-1ed8rzx-MuiStack-root"
        >
          <div
            className="MuiStack-root css-1ds45zp-MuiStack-root"
          >
            <span
              className="MuiTypography-root MuiTypography-overline css-1hbyad5-MuiTypography-root"
            >
              per i cittadini
            </span>
            <h4
              className="MuiTypography-root MuiTypography-h4 css-wz9of0-MuiTypography-root"
            >
              Non perderti più nessuna notifica
            </h4>
            <p
              className="MuiTypography-root MuiTypography-body2 css-1yr8029-MuiTypography-root"
            >
              Con Piattaforma Notifiche, ricevi e gestisci nello stesso spazio tutti gli atti di notifica che ti inviano Enti e Pubbliche Amministrazioni, come multe o certificati elettorali. E, grazie all'integrazione con pagoPA, puoi anche pagare eventuali costi. Così, risparmi tempo e denaro.
            </p>
          </div>
          <div
            className="MuiStack-root css-ohvfxc-MuiStack-root"
          >
            <button
              className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium css-1ey3k6t-MuiButtonBase-root-MuiButton-root"
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onContextMenu={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex={0}
              text="Accedi"
              type="button"
            >
              Accedi
            </button>
            <button
              className="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium css-p6jo29-MuiButtonBase-root-MuiButton-root"
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onContextMenu={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex={0}
              text="Scopri di più"
              type="button"
            >
              Scopri di più
            </button>
          </div>
        </div>
      </div>
      <div
        className="MuiGrid-root MuiGrid-item MuiGrid-grid-md-5 css-1bg3dt9-MuiGrid-root"
      >
        <div
          className="MuiBox-root css-1fol4ad"
        >
          <img
            alt="a landscape photo"
            src="static/media/regular.d1ac9ad6.png"
            style={
              {
                "height": "auto",
                "maxWidth": "100%",
                "objectFit": "contain",
                "objectPosition": "center",
                "transform": "",
                "userSelect": "none",
              }
            }
          />
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`renders correctly standard reversed 1`] = `
<section
  className="MuiBox-root css-mh82v9"
>
  <div
    className="MuiContainer-root MuiContainer-maxWidthLg MuiContainer-disableGutters css-1p4tas-MuiContainer-root"
  >
    <div
      className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-direction-xs-[object Object] css-1qht6bt-MuiGrid-root"
    >
      <div
        className="MuiGrid-root MuiGrid-item MuiGrid-grid-md-5 css-1bg3dt9-MuiGrid-root"
      >
        <div
          className="MuiStack-root css-1ed8rzx-MuiStack-root"
        >
          <div
            className="MuiStack-root css-1ds45zp-MuiStack-root"
          >
            <span
              className="MuiTypography-root MuiTypography-overline css-1hbyad5-MuiTypography-root"
            >
              per i cittadini
            </span>
            <h4
              className="MuiTypography-root MuiTypography-h4 css-wz9of0-MuiTypography-root"
            >
              Non perderti più nessuna notifica
            </h4>
            <p
              className="MuiTypography-root MuiTypography-body2 css-1yr8029-MuiTypography-root"
            >
              Con Piattaforma Notifiche, ricevi e gestisci nello stesso spazio tutti gli atti di notifica che ti inviano Enti e Pubbliche Amministrazioni, come multe o certificati elettorali. E, grazie all'integrazione con pagoPA, puoi anche pagare eventuali costi. Così, risparmi tempo e denaro.
            </p>
          </div>
          <div
            className="MuiStack-root css-ohvfxc-MuiStack-root"
          >
            <button
              className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium css-1ey3k6t-MuiButtonBase-root-MuiButton-root"
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onContextMenu={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex={0}
              text="Accedi"
              type="button"
            >
              Accedi
              <span
                className="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </button>
            <button
              className="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium css-p6jo29-MuiButtonBase-root-MuiButton-root"
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onContextMenu={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex={0}
              text="Scopri di più"
              type="button"
            >
              Scopri di più
              <span
                className="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </button>
          </div>
        </div>
      </div>
      <div
        className="MuiGrid-root MuiGrid-item MuiGrid-grid-md-5 css-1bg3dt9-MuiGrid-root"
      >
        <div
          className="MuiBox-root css-1fol4ad"
        >
          <img
            alt="a landscape photo"
            src="static/media/regular.d1ac9ad6.png"
            style={
              {
                "height": "auto",
                "maxWidth": "100%",
                "objectFit": "contain",
                "objectPosition": "center",
                "transform": "",
                "userSelect": "none",
              }
            }
          />
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`renders correctly wide 1`] = `
<section
  className="MuiBox-root css-mh82v9"
>
  <div
    className="MuiContainer-root MuiContainer-maxWidthLg MuiContainer-disableGutters css-1p4tas-MuiContainer-root"
  >
    <div
      className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-direction-xs-[object Object] css-1uh0q7-MuiGrid-root"
    >
      <div
        className="MuiGrid-root MuiGrid-item MuiGrid-grid-md-6 css-rw45p3-MuiGrid-root"
      >
        <div
          className="MuiStack-root css-1ed8rzx-MuiStack-root"
        >
          <div
            className="MuiStack-root css-1ds45zp-MuiStack-root"
          >
            <span
              className="MuiTypography-root MuiTypography-overline css-1hbyad5-MuiTypography-root"
            >
              per i cittadini
            </span>
            <h4
              className="MuiTypography-root MuiTypography-h4 css-wz9of0-MuiTypography-root"
            >
              Non perderti più nessuna notifica
            </h4>
            <p
              className="MuiTypography-root MuiTypography-body2 css-1yr8029-MuiTypography-root"
            >
              Con Piattaforma Notifiche, ricevi e gestisci nello stesso spazio tutti gli atti di notifica che ti inviano Enti e Pubbliche Amministrazioni, come multe o certificati elettorali. E, grazie all'integrazione con pagoPA, puoi anche pagare eventuali costi. Così, risparmi tempo e denaro.
            </p>
          </div>
          <div
            className="MuiStack-root css-ohvfxc-MuiStack-root"
          >
            <button
              className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium css-1ey3k6t-MuiButtonBase-root-MuiButton-root"
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onContextMenu={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex={0}
              text="Accedi"
              type="button"
            >
              Accedi
            </button>
            <button
              className="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium css-p6jo29-MuiButtonBase-root-MuiButton-root"
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onContextMenu={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex={0}
              text="Scopri di più"
              type="button"
            >
              Scopri di più
            </button>
          </div>
        </div>
      </div>
      <div
        className="MuiGrid-root MuiGrid-item MuiGrid-grid-md-6 css-rw45p3-MuiGrid-root"
      >
        <div
          className="MuiBox-root css-1fol4ad"
        >
          <img
            alt="a landscape photo"
            src="static/media/regular.d1ac9ad6.png"
            style={
              {
                "height": "auto",
                "maxWidth": "100%",
                "objectFit": "contain",
                "objectPosition": "center",
                "transform": "",
                "userSelect": "none",
              }
            }
          />
        </div>
      </div>
    </div>
  </div>
</section>
`;
